--- a/.github/workflows/software_testing_style.yml
+++ b/.github/workflows/software_testing_style.yml
@@ -22,7 +22,7 @@ jobs:
       - name: install simsurveillance and dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install . 
+          python -m pip install .[dev]
 
       - name: run software testing
         run: |
