--- a/.github/workflows/software_testing_unit_os.yml
+++ b/.github/workflows/software_testing_unit_os.yml
@@ -26,7 +26,7 @@ jobs:
       - name: install simsurveillance and dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install .
+          python -m pip install .[dev]
 
       - name: run software testing
         run: |
